@@ -7,32 +7,32 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	7.174 (gritter) 11/4/06";
+	"@(#)/usr/ucb/otfdump.sl	7.175 (gritter) 11/5/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  7.174 (gritter) 11/4/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 7.174 (gritter) 11/4/06";
+static const char sccsid[] USED = "@(#)dpost.sl  7.175 (gritter) 11/5/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 7.175 (gritter) 11/5/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.174 (gritter) 11/4/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.175 (gritter) 11/5/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.174 (gritter) 11/4/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.175 (gritter) 11/5/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "7.174";
+const char revision[] = "7.175";
 /* SLIST */
 /*
-ext.h: * Sccsid @(#)ext.h	1.101 (gritter) 11/2/06
+ext.h: * Sccsid @(#)ext.h	1.102 (gritter) 11/5/06
 hytab.c: * Sccsid @(#)hytab.c	1.4 (gritter) 8/16/05
-n1.c: * Sccsid @(#)n1.c	1.132 (gritter) 11/4/06
+n1.c: * Sccsid @(#)n1.c	1.133 (gritter) 11/5/06
 n2.c: * Sccsid @(#)n2.c	1.38 (gritter) 11/2/06
 n3.c: * Sccsid @(#)n3.c	1.174 (gritter) 11/1/06
-n4.c: * Sccsid @(#)n4.c	1.91 (gritter) 11/2/06
-n5.c: * Sccsid @(#)n5.c	1.116 (gritter) 11/4/06
-n7.c: * Sccsid @(#)n7.c	1.149 (gritter) 11/4/06
+n4.c: * Sccsid @(#)n4.c	1.92 (gritter) 11/5/06
+n5.c: * Sccsid @(#)n5.c	1.117 (gritter) 11/5/06
+n7.c: * Sccsid @(#)n7.c	1.150 (gritter) 11/5/06
 n8.c: * Sccsid @(#)n8.c	1.37 (gritter) 10/29/06
-n9.c: * Sccsid @(#)n9.c	1.65 (gritter) 10/15/06
+n9.c: * Sccsid @(#)n9.c	1.66 (gritter) 11/5/06
 ni.c: * Sccsid @(#)ni.c	1.45 (gritter) 10/29/06
 nii.c: * Sccsid @(#)nii.c	1.47 (gritter) 11/2/06
 suftab.c: * Sccsid @(#)suftab.c	1.4 (gritter) 8/16/05
-tdef.h: * Sccsid @(#)tdef.h	1.152 (gritter) 11/2/06
+tdef.h: * Sccsid @(#)tdef.h	1.153 (gritter) 11/5/06
 nroff.d/n10.c: * Sccsid @(#)n10.c	1.30 (gritter) 9/5/06
 nroff.d/n6.c: * Sccsid @(#)n6.c	1.48 (gritter) 9/8/06
 nroff.d/pt.h: *	Sccsid @(#)pt.h	1.41 (gritter) 8/12/06
